--- a/Exercicios/ex022/fundo005.html
+++ b/Exercicios/ex022/fundo005.html
@@ -6,17 +6,23 @@
     <title>Document</title>
     <style>
         body{
-            height: 100vh;
+           /* height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-repeat: no-repeat;
             background-position:center top;
             background-size: cover;
+            background-attachment: fixed;*/
+            /*Shorthand - backgroubd
+                   color > image > position> repeat >[size] > attachment*/
+            background: black url(imagens/wallpaper002.jpg) center top fixed;
+            background-size: cover;       
+
 
         }
         main{
             background-color: white;
-            width: 600px;
+            max-width: 400px;
             padding: 10px;
             border-radius: 10px;
             border: 1px solid black;
@@ -30,6 +36,21 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quam laudantium quisquam beatae debitis possimus libero, facere quasi. Consequatur corrupti veritatis atque. Necessitatibus, esse. Quaerat dolorum reiciendis cupiditate illo velit.
         Perferendis natus odio, aut tempora neque eius blanditiis optio atque ad, repellat fuga non recusandae quos dolorum, animi quasi. Odio perferendis saepe vitae qui repellat, non laborum consectetur ipsam maxime!
         Beatae odit consequuntur obcaecati cum ab magnam quisquam voluptatum esse perspiciatis, qui a distinctio excepturi mollitia officiis exercitationem tempora dolorum dolorem dolore! Laboriosam cumque commodi corrupti quod, accusantium quidem ipsum.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima quaerat, sapiente vero nesciunt maxime eaque labore atque accusamus debitis ducimus non velit commodi qui quae dignissimos ex odio quasi voluptatibus?
+        Error placeat praesentium totam, harum provident id at quia mollitia cumque fugit dignissimos adipisci labore quis magni hic. Numquam alias explicabo qui eligendi sint cumque eveniet laudantium rem quaerat magni!
+        Nihil cupiditate ipsa eos quo officiis, ex corrupti odit accusantium, nam necessitatibus tempora iure iusto optio ab deserunt suscipit sint corporis modi molestiae rerum accusamus aliquam aspernatur? Quibusdam, ut quam!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima quaerat, sapiente vero nesciunt maxime eaque labore atque accusamus debitis ducimus non velit commodi qui quae dignissimos ex odio quasi voluptatibus?
+        Error placeat praesentium totam, harum provident id at quia mollitia cumque fugit dignissimos adipisci labore quis magni hic. Numquam alias explicabo qui eligendi sint cumque eveniet laudantium rem quaerat magni!
+        Nihil cupiditate ipsa eos quo officiis, ex corrupti odit accusantium, nam necessitatibus tempora iure iusto optio ab deserunt suscipit sint corporis modi molestiae rerum accusamus aliquam aspernatur? Quibusdam, ut quam!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima quaerat, sapiente vero nesciunt maxime eaque labore atque accusamus debitis ducimus non velit commodi qui quae dignissimos ex odio quasi voluptatibus?
+        Error placeat praesentium totam, harum provident id at quia mollitia cumque fugit dignissimos adipisci labore quis magni hic. Numquam alias explicabo qui eligendi sint cumque eveniet laudantium rem quaerat magni!
+        Nihil cupiditate ipsa eos quo officiis, ex corrupti odit accusantium, nam necessitatibus tempora iure iusto optio ab deserunt suscipit sint corporis modi molestiae rerum accusamus aliquam aspernatur? Quibusdam, ut quam!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima quaerat, sapiente vero nesciunt maxime eaque labore atque accusamus debitis ducimus non velit commodi qui quae dignissimos ex odio quasi voluptatibus?
+        Error placeat praesentium totam, harum provident id at quia mollitia cumque fugit dignissimos adipisci labore quis magni hic. Numquam alias explicabo qui eligendi sint cumque eveniet laudantium rem quaerat magni!
+        Nihil cupiditate ipsa eos quo officiis, ex corrupti odit accusantium, nam necessitatibus tempora iure iusto optio ab deserunt suscipit sint corporis modi molestiae rerum accusamus aliquam aspernatur? Quibusdam, ut quam!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima quaerat, sapiente vero nesciunt maxime eaque labore atque accusamus debitis ducimus non velit commodi qui quae dignissimos ex odio quasi voluptatibus?
+        Error placeat praesentium totam, harum provident id at quia mollitia cumque fugit dignissimos adipisci labore quis magni hic. Numquam alias explicabo qui eligendi sint cumque eveniet laudantium rem quaerat magni!
+        Nihil cupiditate ipsa eos quo officiis, ex corrupti odit accusantium, nam necessitatibus tempora iure iusto optio ab deserunt suscipit sint corporis modi molestiae rerum accusamus aliquam aspernatur? Quibusdam, ut quam!</p>
     </main>
 </body>
 </html>
