--- a/Exercicios/ex023/tabela001.html
+++ b/Exercicios/ex023/tabela001.html
@@ -10,6 +10,7 @@
         }
         table{
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
             border: solid 4px rgba(128, 128, 128, 0.459);
         }
@@ -20,11 +21,12 @@
         td{
             border: solid 2px black;
             padding: 10px;
+            text-align: center; /*Alinhamento Horizontal*/
+            vertical-align: top; /*Alinhamento Vertical*/
 
         }
         .dado{
-            background-color: rgba(0, 0, 0, 0.459);
-            color: white;
+            
         }
         .colorido{
             background-image:linear-gradient(to left, yellow, orange, red);
