mesclagem de células

--- a/Exercicios/ex023/tabela002.html
+++ b/Exercicios/ex023/tabela002.html
@@ -234,8 +234,8 @@
         </tbody>
         <tfoot>
             <tr>
-                <th scope="row">Total de Habitantes</th>
-                <td>Brasil</td>
+                <th scope="row" colspan="2">Brasil</th>
+                
                 <td class="num">212 583 720</td>
                 <td class="pais">População mundial(10,3 bilhões)</td>
             </tr>
