acc resposividade tb002

--- a/Exercicios/ex023/tabela002.html
+++ b/Exercicios/ex023/tabela002.html
@@ -42,6 +42,9 @@
         td.pais{
             text-align: center;
         }
+        div#container{
+            overflow-x: auto;
+        }
     </style>
 </head>
 <body>
@@ -57,190 +60,191 @@
                 TFOOT
                     TR, TD, TH        
     -->
-    <table>
-        <caption>
-            População das Unidades Federativas
-        </caption>
-        <thead>
-            <th scope="col" style="width: 20px;">Posição</th>
-            <th scope="col">Estado</th>
-            <th scope="col">População</th>
-            <th scope="col">País Comparável</th>
-
-        </thead>
-        <tbody>
-            <tr>
-                <td>1°</td>
-                <td>São Paulo</td>
-                <td class="num">45 973 190</td>
-                <td class="pais"> Argentina (46 621 847)</td>
-            </tr>
-            <tr>
-                <td>2°</td>
-                <td>Minas Gerais</td>
-                <td class="num">21 322 692</td>
-                <td class="pais">Burquina Fasso (20 903 273)</td>
-            </tr>
-            <tr>
-                <td>3°</td>
-                <td>Rio de Janeiro</td>
-                <td class="num">17 219 679</td>
-                <td class="pais">Camboja (16 718 965)</td>
-            </tr>
-            <tr>
-                <td>4°</td>
-                <td>Bahia</td>
-                <td class="num">14 850 513</td>
-                <td class="pais"> Zimbabwe (14 862 924)</td>
-            </tr>
-            <tr>
-                <td>5°</td>
-                <td>Paraná</td>
-                <td class="num">11 824 665</td>
-                <td class="pais">Tunísia (11 818 619)</td>
-            </tr>
-           <tr>
-                <td>6°</td>
-                <td> Rio Grande do Sul</td>
-                <td class="num">11 229 915</td>
-                <td class="pais"> Portugal (10 343 066)</td>
-           </tr>
-           <tr>
-                <td>7°</td>
-                <td>Pernambuco</td>
-                <td class="num">9 539 029</td>
-                <td class="pais">Áustria (9 006 398)</td>
-           </tr>
-           <tr>
-                <td>8°</td>
-                <td>Ceará</td>
-                <td class="num">9 233 656</td>
-                <td class="pais">Papua-Nova Guiné (8 947 024)</td>
-           </tr>
-           <tr>
-                <td>9°</td>
-                <td>Pará</td>
-                <td class="num">8 664 306</td>
-                <td class="pais"> Suíça (8 654 622)</td>
-           </tr>
-           <tr>
-                <td>10°</td>
-                <td> Santa Catarina</td>
-                <td class="num">8 058 447</td>
-                <td class="pais"> Laos (7 749 595)</td>
-           </tr>
-           <tr>
-                <td>11°</td>
-                <td>Goiás</td>
-                <td class="num">7 350 483</td>
-                <td class="pais"> Bulgária (6 948 445)</td>
-           </tr>
-           <tr>
-                <td>12°</td>
-                <td>Maranhão</td>
-                <td class="num">7 010 960</td>
-                <td class="pais">Bulgária (6 948 445)</td>
-           </tr>
-           <tr>
-                <td>13°</td>
-                <td>Amazonas</td>
-                <td class="num">4 281 209</td>
-                <td class="pais">Geórgia (3 989 167)</td>
-           </tr>
-           <tr>
-                <td>14°</td>
-                <td>Paraíba</td>
-                <td class="num">4 145 040</td>
-                <td class="pais">Geórgia (3 989 167)</td>
-           </tr>
-           <tr>
-                <td>15°</td>
-                <td>Espírito Santo</td>
-                <td class="num">4 102 129</td>
-                <td class="pais">Geórgia (3 989 167)</td>
-           </tr>
-           <tr>
-                <td>16°</td>
-                <td>Mato Grosso</td>
-                <td class="num">3 836 399</td>
-                <td class="pais">Geórgia (3 989 167)</td>
-           </tr>
-           <tr>
-                <td>17°</td>
-                <td>Rio Grande do Norte</td>
-                <td class="num">3 446 071</td>
-                <td class="pais">Uruguai (3 473 730)</td>
-           </tr>
-           <tr>
-                <td>18°</td>
-                <td>Piauí</td>
-                <td class="num">3 375 646</td>
-                <td class="pais"> Bósnia e Herzegovina (3 280 819)</td>
-           </tr>
-           <tr>
-                <td>19°</td>
-                <td>Alagoas</td>
-                <td class="num">3 220 104</td>
-                <td class="pais"> Mongólia (3 278 290)</td>
-           </tr>
-           <tr>
-                <td>20°</td>
-                <td>Distrito Federal</td>
-                <td class="num">2 982 815</td>
-                <td class="pais"> Armênia (2 963 243)</td>
-           </tr>
-           <tr>
-                <td>21°</td>
-                <td>Mato Grosso do Sul</td>
-                <td class="num">2 901 895</td>
-                <td class="pais">Albânia (2 877 797)</td>
-           </tr>
-           <tr>
-                <td>22°</td>
-                <td>Sergipe</td>
-                <td class="num">2 291 077</td>
-                <td class="pais">Gabão (2 225 734)</td>
-           </tr>
-           <tr>
-               <td>23°</td>
-               <td>Rondônia</td>
-               <td class="num">1 746 227</td>
-               <td class="pais">Bahrein (1 701 575)</td>
-           </tr>
-           <tr>
-                <td>24°</td>
-                <td>Tocantins</td>
-                <td class="num">1 577 342</td>
-                <td class="pais">Guiné Equatorial (1 402 985)</td>
-           </tr>
-           <tr>
-               <td>25°</td>
-               <td>Acre</td>
-               <td class="num">880 631</td>
-               <td class="pais">Comores (869 601)</td>
-           </tr>
-           <tr>
-               <td>26°</td>
-               <td>Amapá</td>
-               <td class="num">802 837</td>
-               <td class="pais">Guiana (786 552)</td>
-           </tr>
-           <tr>
-               <td>27°</td>
-               <td>Roraima</td>
-               <td class="num">716 793</td>
-               <td class="pais">Montenegro (649 335)</td>
-           </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <th scope="row" colspan="2">Brasil</th>
-                
-                <td class="num">212 583 720</td>
-                <td class="pais">População mundial(10,3 bilhões)</td>
-            </tr>
-        </tfoot>
-    </table> 
+    <div id="container">
+        <table>
+            <caption>
+                População das Unidades Federativas
+            </caption>
+            <thead>
+                <th scope="col" style="width: 20px;">Posição</th>
+                <th scope="col">Estado</th>
+                <th scope="col">População</th>
+                <th scope="col">País Comparável</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1°</td>
+                    <td>São Paulo</td>
+                    <td class="num">45 973 190</td>
+                    <td class="pais"> Argentina (46 621 847)</td>
+                </tr>
+                <tr>
+                    <td>2°</td>
+                    <td>Minas Gerais</td>
+                    <td class="num">21 322 692</td>
+                    <td class="pais">Burquina Fasso (20 903 273)</td>
+                </tr>
+                <tr>
+                    <td>3°</td>
+                    <td>Rio de Janeiro</td>
+                    <td class="num">17 219 679</td>
+                    <td class="pais">Camboja (16 718 965)</td>
+                </tr>
+                <tr>
+                    <td>4°</td>
+                    <td>Bahia</td>
+                    <td class="num">14 850 513</td>
+                    <td class="pais"> Zimbabwe (14 862 924)</td>
+                </tr>
+                <tr>
+                    <td>5°</td>
+                    <td>Paraná</td>
+                    <td class="num">11 824 665</td>
+                    <td class="pais">Tunísia (11 818 619)</td>
+                </tr>
+               <tr>
+                    <td>6°</td>
+                    <td> Rio Grande do Sul</td>
+                    <td class="num">11 229 915</td>
+                    <td class="pais"> Portugal (10 343 066)</td>
+               </tr>
+               <tr>
+                    <td>7°</td>
+                    <td>Pernambuco</td>
+                    <td class="num">9 539 029</td>
+                    <td class="pais">Áustria (9 006 398)</td>
+               </tr>
+               <tr>
+                    <td>8°</td>
+                    <td>Ceará</td>
+                    <td class="num">9 233 656</td>
+                    <td class="pais">Papua-Nova Guiné (8 947 024)</td>
+               </tr>
+               <tr>
+                    <td>9°</td>
+                    <td>Pará</td>
+                    <td class="num">8 664 306</td>
+                    <td class="pais"> Suíça (8 654 622)</td>
+               </tr>
+               <tr>
+                    <td>10°</td>
+                    <td> Santa Catarina</td>
+                    <td class="num">8 058 447</td>
+                    <td class="pais"> Laos (7 749 595)</td>
+               </tr>
+               <tr>
+                    <td>11°</td>
+                    <td>Goiás</td>
+                    <td class="num">7 350 483</td>
+                    <td class="pais"> Bulgária (6 948 445)</td>
+               </tr>
+               <tr>
+                    <td>12°</td>
+                    <td>Maranhão</td>
+                    <td class="num">7 010 960</td>
+                    <td class="pais">Bulgária (6 948 445)</td>
+               </tr>
+               <tr>
+                    <td>13°</td>
+                    <td>Amazonas</td>
+                    <td class="num">4 281 209</td>
+                    <td class="pais">Geórgia (3 989 167)</td>
+               </tr>
+               <tr>
+                    <td>14°</td>
+                    <td>Paraíba</td>
+                    <td class="num">4 145 040</td>
+                    <td class="pais">Geórgia (3 989 167)</td>
+               </tr>
+               <tr>
+                    <td>15°</td>
+                    <td>Espírito Santo</td>
+                    <td class="num">4 102 129</td>
+                    <td class="pais">Geórgia (3 989 167)</td>
+               </tr>
+               <tr>
+                    <td>16°</td>
+                    <td>Mato Grosso</td>
+                    <td class="num">3 836 399</td>
+                    <td class="pais">Geórgia (3 989 167)</td>
+               </tr>
+               <tr>
+                    <td>17°</td>
+                    <td>Rio Grande do Norte</td>
+                    <td class="num">3 446 071</td>
+                    <td class="pais">Uruguai (3 473 730)</td>
+               </tr>
+               <tr>
+                    <td>18°</td>
+                    <td>Piauí</td>
+                    <td class="num">3 375 646</td>
+                    <td class="pais"> Bósnia e Herzegovina (3 280 819)</td>
+               </tr>
+               <tr>
+                    <td>19°</td>
+                    <td>Alagoas</td>
+                    <td class="num">3 220 104</td>
+                    <td class="pais"> Mongólia (3 278 290)</td>
+               </tr>
+               <tr>
+                    <td>20°</td>
+                    <td>Distrito Federal</td>
+                    <td class="num">2 982 815</td>
+                    <td class="pais"> Armênia (2 963 243)</td>
+               </tr>
+               <tr>
+                    <td>21°</td>
+                    <td>Mato Grosso do Sul</td>
+                    <td class="num">2 901 895</td>
+                    <td class="pais">Albânia (2 877 797)</td>
+               </tr>
+               <tr>
+                    <td>22°</td>
+                    <td>Sergipe</td>
+                    <td class="num">2 291 077</td>
+                    <td class="pais">Gabão (2 225 734)</td>
+               </tr>
+               <tr>
+                   <td>23°</td>
+                   <td>Rondônia</td>
+                   <td class="num">1 746 227</td>
+                   <td class="pais">Bahrein (1 701 575)</td>
+               </tr>
+               <tr>
+                    <td>24°</td>
+                    <td>Tocantins</td>
+                    <td class="num">1 577 342</td>
+                    <td class="pais">Guiné Equatorial (1 402 985)</td>
+               </tr>
+               <tr>
+                   <td>25°</td>
+                   <td>Acre</td>
+                   <td class="num">880 631</td>
+                   <td class="pais">Comores (869 601)</td>
+               </tr>
+               <tr>
+                   <td>26°</td>
+                   <td>Amapá</td>
+                   <td class="num">802 837</td>
+                   <td class="pais">Guiana (786 552)</td>
+               </tr>
+               <tr>
+                   <td>27°</td>
+                   <td>Roraima</td>
+                   <td class="num">716 793</td>
+                   <td class="pais">Montenegro (649 335)</td>
+               </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <th scope="row" colspan="2">Brasil</th>
+        
+                    <td class="num">212 583 720</td>
+                    <td class="pais">População mundial(10,3 bilhões)</td>
+                </tr>
+            </tfoot>
+        </table>
+    </div>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae repellendus consectetur expedita repellat amet laborum dolores corrupti, unde veniam, enim praesentium ullam dicta blanditiis quae voluptatibus voluptatum tempore esse quod.
     Non, qui tempora? Ducimus architecto voluptatem hic quos sed harum quo tempora ullam dicta, possimus, consequatur ratione? Cupiditate assumenda delectus dicta, vero in ea porro molestiae laboriosam esse laborum harum!
     Corporis, rerum ullam! Sit rem unde vel possimus ducimus nisi fugit aliquid, odit, corrupti dolores dolore illum obcaecati ipsam minus sequi doloribus omnis alias delectus aspernatur! Fuga reprehenderit magni magnam?
