--- a/Exercicios/ex024/iframe001.html
+++ b/Exercicios/ex024/iframe001.html
@@ -4,13 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de iframe</title>
+    <style>
+        iframe{
+            width: 600px;
+            height: 250px;
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de iframe</h1>
     <p>Acessando o site do 
-        <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>
+        <iframe src="https://www.cursoemvideo.com" frameborder="0">
+            <a href="https://www.cursoemvideo.com">CursoemVideo</a>
+        </iframe>
          para aprender a programar.</p>
-
-    <p>O site do <iframe src="https://www.google.com.br" frameborder="0"></iframe>tambem é muito bom.</p>     
+   
+    <p>O repositorio de Guanabara 
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0">
+            <a href="https://gustavoguanabara.github.io">no Github</a>
+        </iframe>
+        tambem é bem legal</p>  
 </body>
 </html>
