--- a/Exercicios/ex024/iframe002.html
+++ b/Exercicios/ex024/iframe002.html
@@ -21,7 +21,9 @@
 Tempora quisquam sint vero sunt nam mollitia sapiente repellendus, odit temporibus ullam consectetur sit numquam, illum saepe, cum provident? Quidem assumenda optio soluta incidunt qui, veritatis officia nemo! Eveniet, veritatis.
 Corporis assumenda explicabo omnis fuga. Perferendis nobis natus voluptatum est eius deserunt aliquid reprehenderit architecto libero recusandae. Dignissimos optio aliquam natus facilis. Sint consequatur doloribus, libero earum itaque nobis labore.</p>
 
-<iframe src="pag001.html" frameborder="0"></iframe>
+<iframe src="pagextra/pag001.html" frameborder="0">
+    <p class="error">Infelizmente seu navegador não é compativel com nosso  conteudo</p>
+</iframe>
 
 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis et distinctio dolore, exercitationem nam temporibus asperiores enim sit molestiae ex iste vel, reiciendis veniam aut similique tempora, molestias corrupti deleniti.
 Vitae voluptate, ipsam adipisci expedita sapiente qui soluta dolores amet architecto aliquam accusantium recusandae doloribus minima. Ducimus tenetur error nisi harum deleniti excepturi illum ullam libero veritatis. Earum, vitae corporis?
